Fresh start and added a Config class